--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo I am Yuvraj From Batch-8
+          echo I am Yuvraj From Batch-8,
           echo and i am a software trainee.
