--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   
   job-1:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       
       - uses: actions/checkout@v3
